@@ -9,6 +9,7 @@ New features:
   ZMI way of dealing with line fields.
 - image widget in edit mode display the current image
 - enhanced int, long, float widgets (better support for separators and range)
+- Vocabularies can now have write ACLs to allow user edits (no skins yet).
 Bug fixes:
 ~~~~~~~~~~
 - 
@@ -19,3 +20,4 @@ New internal features:
 - adding style_prefix property to Layout
 - Refactored to provide a correct set of steps to do the validation and
   rendering.
+- New PropertiesPostProcessor mixin to allow posprocessed ZMI properties.
